Fixed navbar on mobile breakpoint

--- a/front/src/Components/NavBar/NavBar.css
+++ b/front/src/Components/NavBar/NavBar.css
@@ -39,3 +39,25 @@
     flex-direction: row;
   }
 }
+
+@media (max-width: 800px) {
+  #Navbar .logo {
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  #Navbar .icons {
+    justify-content: center;
+  }
+
+  #Navbar .icons > img {
+    width: 24px;
+    height: 24px;
+  }
+
+  #Navbar .icons > img:last-child {
+    width: 20px;
+    height: 20px;
+    padding-right: 1em;
+  }
+}
